# pan_tilt_ros

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  package.xml
config/: cmd_config.yaml  config.yaml  ctrl_config.yaml
launch/: description_launch.py  pan_tilt_launch.py
meshes/: base_link.stl  camera_link.stl  oakd.stl  pan_motor.stl  pan_tilt_bracket.stl  pan_tilt_link.stl  payload_link.stl  tilt_motor.stl
src/: pan_tilt_cmd_node.cpp  pan_tilt_ctrl_node.cpp  pan_tilt_node.cpp
urdf/: materials.xacro  pan_tilt_urdf.common  pan_tilt_urdf.gazebo  pan_tilt_urdf.trans  pan_tilt_urdf.xacro
